{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 24,
  "lineage": "1fcb4be9-a5c7-19c9-d6b9-372096391d93",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/networkInterfaces/mtc-ni",
            "internal_domain_name_suffix": "iy0125vgnqzu1ah00pkniqymod.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.128.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
                "subnet_id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-networks/subnets/mtc-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8B-BA-B8",
            "name": "mtc-ni",
            "private_ip_address": "10.128.1.4",
            "private_ip_addresses": [
              "10.128.1.4"
            ],
            "resource_group_name": "mtc-resources",
            "tags": {
              "env": "dev"
            },
            "virtual_machine_id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Compute/virtualMachines/mtc-machine"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-la",
            "azurerm_subnet.mtc-la",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-securitygroup",
            "location": "eastus",
            "name": "mtc-securitygroup",
            "resource_group_name": "mtc-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-la"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-securitygroup/securityRules/mtc-dev-rule",
            "name": "mtc-dev-rule",
            "network_security_group_name": "mtc-securitygroup",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-la"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.29.178",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc-ip",
            "resource_group_name": "mtc-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "env": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-la"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-la",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.128.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-networks/subnets/mtc-subnet",
            "name": "mtc-subnet",
            "resource_group_name": "mtc-resources",
            "virtual_network_name": "mtc-networks"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-la",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-networks/subnets/mtc-subnet",
            "network_security_group_id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-securitygroup",
            "subnet_id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-networks/subnets/mtc-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-la",
            "azurerm_subnet.mtc-la",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.128.0.0/12"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7ebe3546-6ca6-4d33-80fa-d3d4d4430c73",
            "id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-networks",
            "location": "eastus",
            "name": "mtc-networks",
            "resource_group_name": "mtc-resources",
            "subnet": [
              {
                "address_prefix": "10.128.1.0/24",
                "id": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-networks/subnets/mtc-subnet",
                "name": "mtc-subnet",
                "security_group": "/subscriptions/9757fc10-c647-4daa-9db7-23493aa9acb6/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-securitygroup"
              }
            ],
            "tags": {
              "env": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-la"
          ]
        }
      ]
    }
  ]
}